syntax = "proto3";
package pb;
import "game_type.proto";

// 玩家的基础数据
message UserData
{
    string userid    = 1;//用户id
    string nickName  = 2;//昵称
    string avatarUrl = 3;//头像
    int32  gender    = 4;//性别
    int64  diamond   = 5;//钻石
    int64  coin      = 6;//金币
    int64  energy    = 7;//精力
}

// 玩家的游戏数据
message GateData
{
    GateType type = 1;//类型
    int32 gateid  = 2;//关卡id
    int32 num     = 3;//完成次数
    bytes data    = 4;//数据
    int32 star    = 5;//星数
    int32 score   = 6;//分数
}

// 关卡数
message GateCount
{
    GateType type = 1;//类型
    int32 num     = 2;//关卡数
}

// 道具数据
message PropData
{
    PropType type = 1;//类型
    int64 num     = 2;//数量
    int32 attr    = 3;//属性
    string name   = 4;//名字
    int32 scene   = 5;//使用场景
    int32 color   = 6;//颜色品质
}

// 商品信息
message Shop
{
    string id     = 1; //购买ID
    ShopStatus status = 2; //物品状态
    PropType type = 3; //兑换的物品
    PayWay way = 4; //支付方式
    uint32 number = 5; //兑换的数量
    uint32 price  = 6; //支付价格(单位元)
    string name   = 7; //物品名称
    string info   = 8; //物品信息
}

// 连续登录信息
message LoginPrize
{
    uint32 day     = 1;//
    repeated PrizeProp prize = 2;//
    PrizeStatus status = 3;//状态
}

message PrizeProp
{
    PropType type = 1; //物品
    int32 number = 2; //数量
    string name = 3;//名字
}

// share info
message ShareInfo
{
    string id     = 1;//
    int32 number  = 2;//
    string info   = 3;//
    repeated PrizeProp prize = 4;//
    PrizeStatus status = 5;//状态
}

// invite info
message InviteInfo
{
    string id     = 1;//
    InviteType type    = 2;//
    int32 number  = 3;//
    string info   = 4;//
    repeated PrizeProp prize = 5;//
    PrizeStatus status = 6;//状态
}

// gate rank
message GateRank
{
    int32  index     = 1;//
    string userid    = 2;//用户id
    string nickName  = 3;//昵称
    string avatarUrl = 4;//头像
    int32  score     = 5;//
}

// 房间的基础数据
message RoomData
{
    FightType type = 1;//对战类型
    string userid  = 2;//房主id
    string roomid  = 3;//roomid
    string code    = 4;//code
}
